# app-spec-rust

./: .gitignore  .hcdevignore  .hcignore  .travis.yml  README.md  build_and_test-CI.sh  build_and_test.sh  bundle.json  manifest.json
docker/: Dockerfile.app-spec-rust  build  ci  entry  run  run-ci  run-test  run-test-ci  run-update  test  test-ci  update
test/: package-lock.json  package.json  test.js  webpack.config.js
zomes/blog/capabilities/hc_lifecycle/: hc_lifecycle.rs  manifest.json
zomes/blog/capabilities/hc_lifecycle/code/: Cargo.toml
zomes/blog/capabilities/hc_lifecycle/code/src/: lib.rs
zomes/blog/capabilities/main/: main.rs  manifest.json
zomes/blog/capabilities/main/code/: Cargo.toml
zomes/blog/capabilities/main/code/src/: lib.rs
zomes/blog/code/: Cargo.toml
zomes/blog/code/src/: blog.rs  hc_lifecycle_capability.rs  lib.rs  main.rs  main_capability.rs  post.rs  post_validations.rs
zomes/blog/entry_types/post/: manifest.json  validation.rs
zomes/blog/entry_types/post/validation/: .build  Cargo.toml
zomes/blog/entry_types/post/validation/src/: lib.rs
zomes/likes/code/: Cargo.toml
zomes/likes/code/src/: hdk_membrane.rs  lib.rs
zomes/summer/: zome.json
zomes/summer/capabilities/main/: manifest.json
zomes/summer/code/: Cargo.toml
zomes/summer/code/src/: lib.rs
