[package]
name = "code"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
serde_derive = "1.0"
boolinator = "2.4"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
