[package]
name = "code"
version = "0.1.0"
authors = ["Connor Turland <connorturland@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
hdk = { git = "https://github.com/holochain/hdk-rust" }
serde_derive = "1.0"
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
